--- a/desktop.html
+++ b/desktop.html
@@ -33,9 +33,9 @@
     </ul>
   </div>
 <div class="action "> 
-  <button class="action-icon action-button ">
+  <div class="action-icon action-button ">
     <h3 id="icon-down"><span id="vector-icon"></span></h3>
-  </button>
+  </div>
 </div>
 </section>
 <section class="recent-works">
@@ -45,21 +45,21 @@
       <div class="card1">
         <div class="placeholder">
         <div class="project-information">
-          <h2 id="project-title">Multi-Post Stories Gain+Glory</h2>
+          <h2 class="project-title">Multi-Post Stories Gain+Glory</h2>
         <ul class="tags">
-          <li class="tag-item1"><h4 id="item1">Ruby on rails</h4></li>
-          <li class="tag-item2"><h4 id="item1">CSS</h4></li>
-          <li class="tag-item3"><h4 id="item1">JavaScript</h4></li>
-          <li class="tag-item4"><h4 id="item1">html</h4></li>
+          <li class="tag-item1"><h4 class="item1">Ruby on rails</h4></li>
+          <li class="tag-item2"><h4 class="item2">CSS</h4></li>
+          <li class="tag-item3"><h4 class="item3">JavaScript</h4></li>
+          <li class="tag-item4"><h4 class="item4">html</h4></li>
         </ul>
-        <h5 class="see-more"><a id="button-text" href="#">See Project</a></h5>
+        <h5 class="see-more"><a class="button-text" href="#">See Project</a></h5>
       </div>
       </div>
       </div>
       <div class="card2 ">
         <div class="placeholder">
           <div class="project-information">
-            <h2 id="project-title">Multi-Post Stories Gain+Glory</h2>
+            <h2 class="project-title">Multi-Post Stories Gain+Glory</h2>
             <ul class="tags">
               <li class="tag-item1">
                 <h4 id="item1">Ruby on rails</h4>
@@ -74,14 +74,14 @@
                 <h4 id="item1">html</h4>
               </li>
             </ul>
-            <h5 class="see-more"><a id="button-text" href="#">See Project</a></h5>
+            <h5 class="see-more"><a class="button-text" href="#">See Project</a></h5>
           </div>
         </div>
       </div>
       <div class="card3 ">
         <div class="placeholder">
           <div class="project-information">
-            <h2 id="project-title">Multi-Post Stories Gain+Glory</h2>
+            <h2 class="project-title">Multi-Post Stories Gain+Glory</h2>
             <ul class="tags">
               <li class="tag-item1">
                 <h4 id="item1">Ruby on rails</h4>
@@ -105,7 +105,7 @@
       <div class="card1">
         <div class="placeholder">
           <div class="project-information">
-            <h2 id="project-title">Multi-Post Stories Gain+Glory</h2>
+            <h2 class="project-title">Multi-Post Stories Gain+Glory</h2>
             <ul class="tags">
               <li class="tag-item1">
                 <h4 id="item1">Ruby on rails</h4>
@@ -120,14 +120,14 @@
                 <h4 id="item1">html</h4>
               </li>
             </ul>
-            <h5 class="see-more"><a id="button-text" href="#">See Project</a></h5>
+            <h5 class="see-more"><a class="button-text" href="#">See Project</a></h5>
           </div>
         </div>
       </div>
       <div class="card2">
         <div class="placeholder">
           <div class="project-information">
-            <h2 id="project-title">Multi-Post Stories Gain+Glory</h2>
+            <h2 class="project-title">Multi-Post Stories Gain+Glory</h2>
             <ul class="tags">
               <li class="tag-item1">
                 <h4 id="item1">Ruby on rails</h4>
@@ -142,14 +142,14 @@
                 <h4 id="item1">html</h4>
               </li>
             </ul>
-            <h5 class="see-more"><a id="button-text" href="#">See Project</a></h5>
+            <h5 class="see-more"><a class="button-text" href="#">See Project</a></h5>
           </div>
         </div>
       </div>
       <div class="card3">
         <div class="placeholder">
           <div class="project-information">
-            <h2 id="project-title">Multi-Post Stories Gain+Glory</h2>
+            <h2 class="project-title">Multi-Post Stories Gain+Glory</h2>
             <ul class="tags">
               <li class="tag-item1">
                 <h4 id="item1">Ruby on rails</h4>
@@ -164,7 +164,7 @@
                 <h4 id="item1">html</h4>
               </li>
             </ul>
-            <h5 class="see-more"><a id="button-text" href="#">See Project</a></h5>
+            <h5 class="see-more"><a class="button-text" href="#">See Project</a></h5>
           </div>
         </div>
       </div>
@@ -182,25 +182,25 @@
     <div class="lang-set">
       <div class="skill-placeholder">
       <div class="tags-and-title">
-      <h1 id="title">Languages</h1>
+      <h1 class="title">Languages</h1>
       <ul class="skill-tags">
         <li class="skill-item">
-          <h6 id="item-text">Ruby on Rails</h6>
+          <h6 class="item-text">Ruby on Rails</h6>
         </li>
         <li class="skill-item">
-          <h6 id="item-text">CSS</h6>
+          <h6 class="item-text">CSS</h6>
         </li>
         <li class="skill-item">
-          <h6 id="item-text">JavaScript</h6>
+          <h6 class="item-text">JavaScript</h6>
         </li>
         <li class="skill-item">
-          <h6 id="item-text">html</h6>
+          <h6 class="item-text">html</h6>
         </li>
       </ul>
       </div>
       <div class="icons">
         <div class="lang-icon">
-          <a href="#"><img src="images/Lang.png"></a>
+          <a href="#"><img src="images/Lang.png" alt ="Language icon"></a>
         </div>
       </div>
       </div>
@@ -208,7 +208,7 @@
     <div class="framework-set">
       <div class="skill-placeholder">
         <div class="tags-and-title">
-          <h1 id="title">Frameworks</h1>
+          <h1 class="title">Frameworks</h1>
           <ul class="skill-tags">
             <li class="skill-item">
               <h6 id="item-text">Ruby on Rails</h6>
@@ -226,7 +226,7 @@
         </div>
         <div class="icons">
           <div class="lang-icon">
-            <a href="#"><img src="images/Frame.svg"></a>
+            <a href="#"><img src="images/Frame.svg" alt="Frameworkl icon"></a>
           </div>
         </div>
       </div>
@@ -234,7 +234,7 @@
     <div class="skills-set">
       <div class="skill-placeholder">
         <div class="tags-and-title">
-          <h1 id="title">Skills</h1>
+          <h1 class="title">Skills</h1>
           <ul class="skill-tags">
             <li class="skill-item">
               <h6 id="item-text">Ruby on Rails</h6>
@@ -252,7 +252,7 @@
         </div>
         <div class="icons">
           <div class="lang-icon">
-            <a href="#"><img src="images/Skills.svg"></a>
+            <a href="#"><img src="images/Skills.svg" alt="SkillIcon"></a>
           </div>
         </div>
       </div>
@@ -265,8 +265,8 @@
     <input type="text" name="fname" id="fname" placeholder="First Name" maxlength="50" required>
     <input type="text" name="lname" id="lname" placeholder="Last Name" maxlength="50" required>
     <input type="email" name="email" id="email" placeholder="Email" maxlength="50" required>
-    <textarea type="text" name="msg" id="msg"  maxlength="500" cols="30" rows="10" required>Typing Something</textarea>
-    <button class="submit-btn" type="submit"><h6 id="button-text">Get in Touch</h6></button>
+    <textarea  name="msg" id="msg"  maxlength="500" cols="30" rows="10" required>Typing Something</textarea>
+    <button class="submit-btn" type="submit"><span id="button-text">Get in Touch</span></button>
   </div>
 </section>
   </main>
