Commit desktop version css style

--- a/desktop.html
+++ b/desktop.html
@@ -68,10 +68,10 @@
                 <h4 id="item1">CSS</h4>
               </li>
               <li class="tag-item3">
-                <h4 id="item1">JavaScript</h4>
+                <h4 class="item1">JavaScript</h4>
               </li>
               <li class="tag-item4">
-                <h4 id="item1">html</h4>
+                <h4 class="item1">html</h4>
               </li>
             </ul>
             <h5 class="see-more"><a class="button-text" href="#">See Project</a></h5>
@@ -176,7 +176,7 @@
     <h6 id="personal-title">About Me</h6>
     <p id="personal-detail">I can help you build a product , feature or website Look through some of my work and experience! If you like what you
     see and have a project you need coded, don’t hestiate to contact me.</p>
-    <h6 class="meet-button"><a id="button-text" href="#">Get My Resume</a></h6>
+    <h6 class="meet-button"><a class="button-text" href="#">Get My Resume</a></h6>
   </div>
   <div class="personal-info-card">
     <div class="lang-set">
@@ -214,13 +214,13 @@
               <h6 id="item-text">Ruby on Rails</h6>
             </li>
             <li class="skill-item">
-              <h6 id="item-text">CSS</h6>
+              <h6 class="item-text">CSS</h6>
             </li>
             <li class="skill-item">
-              <h6 id="item-text">JavaScript</h6>
+              <h6 class="item-text">JavaScript</h6>
             </li>
             <li class="skill-item">
-              <h6 id="item-text">html</h6>
+              <h6 class="item-text">html</h6>
             </li>
           </ul>
         </div>
@@ -240,13 +240,13 @@
               <h6 id="item-text">Ruby on Rails</h6>
             </li>
             <li class="skill-item">
-              <h6 id="item-text">CSS</h6>
+              <h6 class="item-text">CSS</h6>
             </li>
             <li class="skill-item">
-              <h6 id="item-text">JavaScript</h6>
+              <h6 class="item-text">JavaScript</h6>
             </li>
             <li class="skill-item">
-              <h6 id="item-text">html</h6>
+              <h6 class="item-text">html</h6>
             </li>
           </ul>
         </div>
