Commit stylelint correction desktop version css style

--- a/desktop.html
+++ b/desktop.html
@@ -62,10 +62,10 @@
             <h2 class="project-title">Multi-Post Stories Gain+Glory</h2>
             <ul class="tags">
               <li class="tag-item1">
-                <h4 id="item1">Ruby on rails</h4>
+                <h4 class="item1">Ruby on rails</h4>
               </li>
               <li class="tag-item2">
-                <h4 id="item1">CSS</h4>
+                <h4 class="item1">CSS</h4>
               </li>
               <li class="tag-item3">
                 <h4 class="item1">JavaScript</h4>
@@ -237,7 +237,7 @@
           <h1 class="title">Skills</h1>
           <ul class="skill-tags">
             <li class="skill-item">
-              <h6 id="item-text">Ruby on Rails</h6>
+              <h6 class="item-text">Ruby on Rails</h6>
             </li>
             <li class="skill-item">
               <h6 class="item-text">CSS</h6>
@@ -266,7 +266,7 @@
     <input type="text" name="lname" id="lname" placeholder="Last Name" maxlength="50" required>
     <input type="email" name="email" id="email" placeholder="Email" maxlength="50" required>
     <textarea  name="msg" id="msg"  maxlength="500" cols="30" rows="10" required>Typing Something</textarea>
-    <button class="submit-btn" type="submit"><span id="button-text">Get in Touch</span></button>
+    <button class="submit-btn" type="submit"><span class="button-text">Get in Touch</span></button>
   </div>
 </section>
   </main>
