Commit stylelint correction desktop version css style

--- a/desktop.html
+++ b/desktop.html
@@ -87,13 +87,13 @@
                 <h4 id="item1">Ruby on rails</h4>
               </li>
               <li class="tag-item2">
-                <h4 id="item1">CSS</h4>
+                <h4 class="item1">CSS</h4>
               </li>
               <li class="tag-item3">
-                <h4 id="item1">JavaScript</h4>
+                <h4 class="item1">JavaScript</h4>
               </li>
               <li class="tag-item4">
-                <h4 id="item1">html</h4>
+                <h4 class="item1">html</h4>
               </li>
             </ul>
             <h5 class="see-more"><a id="button-text" href="#">See Project</a></h5>
@@ -108,16 +108,16 @@
             <h2 class="project-title">Multi-Post Stories Gain+Glory</h2>
             <ul class="tags">
               <li class="tag-item1">
-                <h4 id="item1">Ruby on rails</h4>
+                <h4 class="item1">Ruby on rails</h4>
               </li>
               <li class="tag-item2">
-                <h4 id="item1">CSS</h4>
+                <h4 class="item1">CSS</h4>
               </li>
               <li class="tag-item3">
-                <h4 id="item1">JavaScript</h4>
+                <h4 class="item1">JavaScript</h4>
               </li>
               <li class="tag-item4">
-                <h4 id="item1">html</h4>
+                <h4 class="item1">html</h4>
               </li>
             </ul>
             <h5 class="see-more"><a class="button-text" href="#">See Project</a></h5>
@@ -130,16 +130,16 @@
             <h2 class="project-title">Multi-Post Stories Gain+Glory</h2>
             <ul class="tags">
               <li class="tag-item1">
-                <h4 id="item1">Ruby on rails</h4>
+                <h4 class="item1">Ruby on rails</h4>
               </li>
               <li class="tag-item2">
-                <h4 id="item1">CSS</h4>
+                <h4 class="item1">CSS</h4>
               </li>
               <li class="tag-item3">
-                <h4 id="item1">JavaScript</h4>
+                <h4 class="item1">JavaScript</h4>
               </li>
               <li class="tag-item4">
-                <h4 id="item1">html</h4>
+                <h4 class="item1">html</h4>
               </li>
             </ul>
             <h5 class="see-more"><a class="button-text" href="#">See Project</a></h5>
@@ -152,16 +152,16 @@
             <h2 class="project-title">Multi-Post Stories Gain+Glory</h2>
             <ul class="tags">
               <li class="tag-item1">
-                <h4 id="item1">Ruby on rails</h4>
+                <h4 class="item1">Ruby on rails</h4>
               </li>
               <li class="tag-item2">
-                <h4 id="item1">CSS</h4>
+                <h4 class="item1">CSS</h4>
               </li>
               <li class="tag-item3">
-                <h4 id="item1">JavaScript</h4>
+                <h4 class="item1">JavaScript</h4>
               </li>
               <li class="tag-item4">
-                <h4 id="item1">html</h4>
+                <h4 class="item1">html</h4>
               </li>
             </ul>
             <h5 class="see-more"><a class="button-text" href="#">See Project</a></h5>
@@ -211,7 +211,7 @@
           <h1 class="title">Frameworks</h1>
           <ul class="skill-tags">
             <li class="skill-item">
-              <h6 id="item-text">Ruby on Rails</h6>
+              <h6 class="item-text">Ruby on Rails</h6>
             </li>
             <li class="skill-item">
               <h6 class="item-text">CSS</h6>
