Commit stylelint correction desktop version css style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main class="toolbar">
     <div class="nav-menu">
-      <h4><a href="#">Welcome</a></h4>
+      <h4 class="welcome"><a href="#">Welcome</a></h4>
       <ul class="menu-item">
         <li class="menu-lists"><a href="#">Projects </a></li>
         <li class="menu-lists"><a href="#">About</a></li>
