Cmmiting corrections from a review

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
     </section>
     <section>
         <div class="bottom-social-media">
-          <ul class="social-nav">
+          <ul class="bottom-nav">
             <li><a href="http://linkedin.com/AddisTsega"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="http://linkedin.com/AdaTsega"><i class="fa fa-twitter"></i></a></li>
             <li><a href="http://linkedin.com/Aseadd"><i class="fa fa-github"></i></a></li>
