Remove navigation and other section contents when mobile menu icon is active

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main class="toolbar">
     <nav class="nav-menu">
-      <h4 class="welcome"><a href="#">Welcome</a></h4>
+      <h4 class="welcome"><a href="#" class='logo-text'>Welcome</a></h4>
       <ul class='menu-item'>
         <li class="menu-lists"><a href="#Project" class='nav-link'>Projects </a></li>
         <li class="menu-lists"><a href="#About" class='nav-link'>About</a></li>
