Fix linter error commits

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
           <div class="modal" id="modal">
             <div class="modal-header">
-              <img src="images/5G.png" class="project-image" id="project-image-desktop">
+              <img src="images/5G.png" class="project-image" id="project-image-desktop" alt='Project image'>
               <button data-close-button class="close-button">&times;</button>
             </div>
             <div class="modal-body">
@@ -133,7 +133,7 @@
                 <h4 class="modal-title" id="modal-title">Keeping track of hundreds of
                   components</h4>
                 <div id="modal-btns">
-                  <button class="popup-btns" type="submit">See Live <img src="images/Icon - live.svg" alt=""> <i class="fa-solid fa-up-right-from-square"></i></button>
+                  <button class="popup-btns" type="submit">See Live <img src="images/Icon-live.svg" alt="Live icon"> <i class="fa-solid fa-up-right-from-square"></i></button>
                   <button class="popup-btns" type="submit">See Source </button>
                 </div>
               </div>
