--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
       <p id="contact-title">
         I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
       </p>
-      <form class="contact-form" action="https://formspree.io/f/mzboldlz" method="get" id='form' >       
+      <form class="contact-form" action="https://formspree.io/f/mzboldlz" method="post" id='form' >       
         <ul class="text-boxs">
           <li>
             <input type="text" name="user-name" id="name" maxlength="30" required placeholder="Full Name">
