--- a/index.html
+++ b/index.html
@@ -157,11 +157,7 @@
                   <p>Codepen</p>
                 </li>
               </ul>
-              <p id="modal-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it 1960s with the releaLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                type and scrambled it 1960s with the relea</p>
+              <p id="modal-description"></p>
             </div>
           </div>
           <div id="overlay"></div>
