--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="img-placeholder1">
             <div class="project-text">
               <div class="project-title">
-                <h3 class="project-name">Multi-Post Stories Gain+Glory</h3>
+                <h3 class="project-name">Space Travellers Hub</h3>
                 <ul class="tags">
                   <li class=" tag1">
                     <h6 class="tag-name1">Ruby on rails</h6>
@@ -99,7 +99,7 @@
           <div class="img-placeholder2">
             <div class="project-text">
               <div class="project-title">
-                <h3 class="project-name">Multi-Post Stories Gain+Glory</h3>
+                <h3 class="project-name">Crypto Currency Metrics Web App</h3>
                 <ul class="tags">
                   <li class=" tag1">
                     <h6 class="tag-name1">Ruby on rails</h6>
@@ -168,7 +168,7 @@
           <div class="img-placeholder3">
             <div class="project-text">
               <div class="project-title">
-                <h3 class="project-name">Multi-Post Stories Gain+Glory</h3>
+                <h3 class="project-name">Bookstore Web App</h3>
                 <ul class="tags">
                   <li class=" tag1">
                     <h6 class="tag-name1">Ruby on rails</h6>
@@ -200,7 +200,7 @@
           <div class="img-placeholder4">
             <div class="project-text">
               <div class="project-title">
-                <h3 class="project-name">Multi-Post Stories Gain+Glory</h3>
+                <h3 class="project-name">Math Magicians</h3>
                 <ul class="tags">
                   <li class=" tag1">
                     <h6 class="tag-name1">Ruby on rails</h6>
@@ -231,7 +231,7 @@
           <div class="img-placeholder5">
             <div class="project-text">
               <div class="project-title">
-                <h3 class="project-name">Multi-Post Stories Gain+Glory</h3>
+                <h3 class="project-name">Meal Web App</h3>
                 <ul class="tags">
                   <li class=" tag1">
                     <h6 class="tag-name1">Ruby on rails</h6>
@@ -262,7 +262,7 @@
             <div class="img-placeholder6">
               <div class="project-text">
                 <div class="project-title">
-                  <h3 class="project-name">Multi-Post Stories Gain+Glory</h3>
+                  <h3 class="project-name">Web Development Bootcamp Website</h3>
                   <ul class="tags">
                     <li class=" tag1">
                       <h6 class="tag-name1">Ruby on rails</h6>
