--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="headline">
       <div class="primary-text">
         <h1>Hey there, I'm Addis</h1>
-        <h4>I'm software Engineer</h4>
+        <h4>I'm Full-stack Web Developer</h4>
       </div>
       <div class="supporting-text">
         <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you
